--- a/.distignore
+++ b/.distignore
@@ -14,6 +14,7 @@ composer.json
 composer.lock
 Gruntfile.js
 package.json
+package-lock.json
 phpunit.xml
 phpunit.xml.dist
 multisite.xml
@@ -28,3 +29,9 @@ node_modules
 *.sql
 *.tar.gz
 *.zip
+.github
+.circleci
+contributing.md
+docs
+release.sh
+release
