--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "Gruntfile.js",
   "author": "innlabs",
   "scripts": {
+    "semantic-release": "semantic-release",
     "release:archive": "rm -rf release && mkdir -p release && rsync -r . ./release/republication-tracker-tool --exclude-from='./.distignore' && cd release && zip -r republication-tracker-tool.zip republication-tracker-tool",
     "release": "npm run semantic-release"
   },
