--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cm": "newspack-scripts commit",
     "i18n": "grunt i18n",
     "readme": "grunt readme",
-    "semantic-release": "newspack-scripts release --files=newspack-new-plugin-boilerplate.php",
+    "semantic-release": "newspack-scripts release --files=republication-tracker-tool.php.php",
     "release:archive": "rm -rf release && mkdir -p release && rsync -r . ./release/republication-tracker-tool --exclude-from='./.distignore' && cd release && zip -r republication-tracker-tool.zip republication-tracker-tool",
     "release": "npm run semantic-release"
   },
