--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,72 +1,41 @@
 version: 2.1
 
-commands:
-  checkout_with_workspace:
+orbs:
+  newspack: adekbadek/newspack@1.1.1
+
+jobs:
+  release_wporg:
+    docker:
+      - image: cimg/php:7.4-browsers
     steps:
       - checkout
       - attach_workspace:
           at: ~/
-
-jobs:
-  release_github:
-    docker:
-      - image: circleci/php:7.2-node-browsers
-    steps:
-      - checkout_with_workspace
       - run:
-          name: Install npm dependencies
-          command: npm ci
-      - run:
-          name: Install rsync
-          command: sudo apt install rsync
-      - run:
-          name: Release new version on Github
-          command: npm run release
-      # Persist assets generated for the GH release, so that they are available for WPORG release.
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - project
-
-  release_wporg:
-    docker:
-      - image: circleci/php:7.2-node-browsers
-    steps:
-      - checkout_with_workspace
-      - run:
-          name: Release new version on WordPress.org
+          name: Release new version on wordpress.org
           command: ./node_modules/newspack-scripts/release-wporg.sh
-
-  post_release:
-    docker:
-      - image: circleci/php:7.2-node-browsers
-    steps:
-      - checkout_with_workspace
-      - run:
-          name: Perform post-release chores
-          command: ./node_modules/newspack-scripts/post-release.sh
 
 workflows:
   version: 2
-  main:
+  all:
     jobs:
-      - release_github:
+      - newspack/release:
           filters:
             branches:
               only:
                 - release
                 - alpha
                 - /^hotfix\/.*/
-      - post_release:
+      - newspack/post-release:
           requires:
-            - release_github
+            - newspack/release
           filters:
             branches:
               only:
                 - release
       - release_wporg:
           requires:
-            - release_github
+            - newspack/release
           filters:
             branches:
               only:
